# silex

./: Cargo.toml  README.md  RELEASE.md  release.toml
.agent/rules/: rust-principles.md
.github/workflows/: ci.yml
docs/: book.toml
docs/src/: README.md  SUMMARY.md
docs/src/ai_docs/: README.md
docs/src/ai_docs/silex/: README.md
docs/src/ai_docs/silex_core/: README.md
docs/src/ai_docs/silex_css/: README.md
docs/src/ai_docs/silex_dom/: README.md
docs/src/ai_docs/silex_html/: README.md
docs/src/ai_docs/silex_macros/: README.md
docs/src/ai_docs/silex_reactivity/: README.md
docs/src/dev_docs/: README.md
docs/src/dev_docs/silex/: README.md
docs/src/dev_docs/silex_core/: README.md
docs/src/dev_docs/silex_css/: README.md
docs/src/dev_docs/silex_dom/: README.md
docs/src/dev_docs/silex_html/: README.md
docs/src/dev_docs/silex_macros/: README.md
docs/src/dev_docs/silex_reactivity/: README.md
docs/src/general_docs/: README.md
docs/src/general_docs/silex/: README.md
docs/src/general_docs/silex_core/: README.md
docs/src/general_docs/silex_css/: README.md
docs/src/general_docs/silex_dom/: README.md
docs/src/general_docs/silex_html/: README.md
docs/src/general_docs/silex_macros/: README.md
docs/src/general_docs/silex_reactivity/: README.md
docs/src/silex/: README.md
docs/src/silex_core/: README.md
docs/src/silex_dom/: README.md
docs/src/silex_macros/: README.md
docs/src/silex_reactivity/: README.md
examples/counter/: Cargo.toml  index.html
examples/counter/src/: main.rs
examples/error_boundary_demo/: Cargo.toml  index.html
examples/error_boundary_demo/src/: main.rs
examples/router/: Cargo.toml  index.html
examples/router/src/: main.rs
examples/showcase/: Cargo.toml  index.html
examples/showcase/src/: advanced.rs  basics.rs  css.rs  flow_control.rs  main.rs  net_demo.rs  persistence.rs  routes.rs
examples/store_demo/: Cargo.toml  index.html
examples/store_demo/src/: main.rs
silex/: Cargo.toml
silex/src/: components.rs  css.rs  dom.rs  flow.rs  lib.rs  net.rs  persist.rs  reactivity.rs  router.rs  storage.rs  store.rs
silex/src/components/: error_boundary.rs  layout.rs  portal.rs  suspense.rs
silex/src/css/: builder.rs  keywords_gen.rs  registry.rs  theme.rs  types.rs
silex/src/dom/: attribute.rs  callback.rs  core.rs  view.rs
silex/src/dom/components/: error_boundary.rs  suspense.rs
silex/src/dom/core/: attribute.rs  element.rs  props.rs  tags.rs  view.rs
silex/src/flow/: dynamic.rs  for_loop.rs  index.rs  show.rs  switch.rs
silex/src/net/: backend.rs  builder.rs  codec.rs  state.rs
silex/src/persist/: backend.rs  builder.rs  codec.rs  error.rs  policy.rs  state.rs
silex/src/router/: context.rs  link.rs  matcher.rs  outlet.rs  route.rs
silex/tests/ui/: fail_color_to_dimension.rs  fail_color_to_dimension.stderr  fail_invalid_signal.rs  fail_invalid_signal.stderr  fail_shorthand_mismatch.rs  fail_shorthand_mismatch.stderr  fail_unit_to_keyword.rs  fail_unit_to_keyword.stderr
silex_core/: Cargo.toml
silex_core/src/: callback.rs  dom.rs  error.rs  lib.rs  log.rs  logic.rs  macros_helper.rs  node_ref.rs  reactivity.rs  traits.rs
silex_core/src/dom/: attribute.rs  element.rs  props.rs  view.rs
silex_core/src/log/: tests.rs
silex_core/src/logic/: arithmetic.rs  compare.rs  transform.rs
silex_core/src/node_ref/: tests.rs
silex_core/src/reactivity/: dispatch.rs  effect.rs  memo.rs  mutation.rs  resource.rs  runtime.rs  signal.rs  slice.rs  stored_value.rs
silex_core/src/reactivity/signal/: derived.rs  ops.rs  registry.rs  tests.rs
silex_core/src/traits/: guards.rs  impls.rs  list.rs  read.rs  write.rs
silex_css/: Cargo.toml
silex_css/src/: builder.rs  lib.rs  properties.rs  runtime.rs  theme.rs  types.rs
silex_css/src/runtime/: dynamic.rs  registry.rs
silex_css/src/types/: calc.rs  complex.rs  gradients.rs  reactivity.rs  shorthands.rs  units.rs
silex_css/tests/ui/: fail_color_to_dimension.rs  fail_color_to_dimension.stderr  fail_invalid_signal.rs  fail_invalid_signal.stderr  fail_shorthand_mismatch.rs  fail_shorthand_mismatch.stderr  fail_unit_to_keyword.rs  fail_unit_to_keyword.stderr
silex_dom/: Cargo.toml
silex_dom/src/: attribute.rs  element.rs  event.rs  helpers.rs  lib.rs  node_ref.rs  props.rs  tags.rs  view.rs
silex_dom/src/attribute/: apply.rs  into_storable.rs  op.rs  props.rs  typed.rs
silex_dom/src/attribute/apply/: foundation.rs  pending.rs  reactive.rs
silex_dom/src/element/: tags.rs
silex_dom/src/event/: types.rs
silex_dom/src/view/: any.rs  list.rs  logic.rs  reactive.rs
silex_hash/: Cargo.toml
silex_hash/src/: css.rs  lib.rs
silex_html/: Cargo.toml
silex_html/src/: attributes.rs  lib.rs
silex_html/src/tags/: html.rs  svg.rs
silex_macros/: Cargo.toml
silex_macros/src/: clone.rs  component.rs  css.rs  lib.rs  props_builder.rs  render.rs  route.rs  store.rs  style.rs
silex_macros/src/css/: ast.rs  classes.rs  compiler.rs  error.rs  style.rs  styled.rs  theme.rs
silex_reactivity/: Cargo.toml
silex_reactivity/src/: algorithm.rs  arena.rs  core.rs  lib.rs  list.rs  node_list.rs  primitive.rs  runtime.rs  value.rs
silex_reactivity/src/core/: algorithm.rs  arena.rs  func_ptr.rs  list.rs  value.rs
silex_reactivity/src/runtime/: scheduler.rs  scope.rs  storage.rs
silex_reactivity/tests/: context.rs  effect.rs  memo.rs  misc.rs  scope.rs  signal.rs
silex_rx/: Cargo.toml
silex_rx/src/: lib.rs
silex_vtable/: Cargo.toml
silex_vtable/src/: any_box.rs  func_ptr.rs  lib.rs  thunk.rs
tools/silex_codegen/: Cargo.toml  css.json  css_overrides.json  mdn_css_properties.json  mdn_css_syntaxes.json  tags.json
tools/silex_codegen/src/: codegen.rs  css.rs  main.rs  tags.rs
tools/silex_codegen/src/css/: codegen.rs  fetch.rs  parse.rs  types.rs
tools/silex_codegen/src/tags/: codegen.rs
