[workspace]
members = [
    "silex",
    "silex_macros",
    "silex_core",
    "silex_html",
    "silex_dom", 
    "silex_reactivity",
    "examples/counter",
    "examples/store_demo",
    "examples/error_boundary_demo",
    "examples/router",
    "examples/showcase",
    "tools/silex_codegen"
]
exclude = [
    "docs",
    "assets",
    "dist",
]
resolver = "3"

[workspace.package]
version = "0.1.0-alpha.8"
edition = "2024"
license = "MIT OR Apache-2.0"
authors = ["Shao G. <shaog.me@gmail.com>"]
repository = "https://github.com/shaogme/silex"
description = "Next Generation High-Performance Rust Web Framework based on fine-grained reactivity and no-virtual-DOM architecture."
readme = "README.md"
homepage = "https://github.com/shaogme/silex"
documentation = "https://docs.rs/silex"
keywords = ["web", "framework", "wasm", "reactive", "gui"]
categories = ["web-programming", "wasm", "gui"]

[workspace.dependencies]

# Internal Crates
silex = { path = "silex", version = "0.1.0-alpha.8" }
silex_core = { path = "silex_core", version = "0.1.0-alpha.8" }
silex_dom = { path = "silex_dom", version = "0.1.0-alpha.8" }
silex_html = { path = "silex_html", version = "0.1.0-alpha.8" }
silex_macros = { path = "silex_macros", version = "0.1.0-alpha.8" }
silex_reactivity = { path = "silex_reactivity", version = "0.1.0-alpha.8" }

# External Crates
wasm-bindgen = "0.2"
web-sys = { version = "0.3", features = [
    "Document",
    "Element",
    "HtmlElement",
    "Node",
    "Text",
    "Window",
    "DomTokenList",
    "Event",
    "EventTarget",
    "History",
    "Location",
    "console",
    "InputEvent",
    "HtmlInputElement",
    "MouseEvent",
    "ErrorEvent",
    "Comment",
    "DocumentFragment",
    "PromiseRejectionEvent",
    "NodeList",
    "CssStyleDeclaration",
    "SvgElement",
    "HtmlStyleElement",
    "HtmlHeadElement",
    "HtmlTextAreaElement",
    "HtmlSelectElement",
    "UrlSearchParams",
    "KeyboardEvent",
    "FocusEvent",
    "SubmitEvent",
    "UiEvent",
    "WheelEvent",
    "PointerEvent",
    "DragEvent",
    "TouchEvent",
    "CompositionEvent",
    "AnimationEvent",
    "TransitionEvent",
    "HtmlAnchorElement",
    "HtmlAreaElement",
    "HtmlAudioElement",
    "HtmlBaseElement",
    "HtmlQuoteElement",
    "HtmlBodyElement",
    "HtmlBrElement",
    "HtmlButtonElement",
    "HtmlCanvasElement",
    "HtmlTableCaptionElement",
    "HtmlTableColElement",
    "HtmlDataElement",
    "HtmlDataListElement",
    "HtmlModElement",
    "HtmlDetailsElement",
    "HtmlDialogElement",
    "HtmlDivElement",
    "HtmlDListElement",
    "HtmlEmbedElement",
    "HtmlFieldSetElement",
    "HtmlFormElement",
    "HtmlHeadingElement",
    "HtmlHrElement",
    "HtmlHtmlElement",
    "HtmlIFrameElement",
    "HtmlImageElement",
    "HtmlLabelElement",
    "HtmlLegendElement",
    "HtmlLiElement",
    "HtmlLinkElement",
    "HtmlMapElement",
    "HtmlMenuElement",
    "HtmlMetaElement",
    "HtmlMeterElement",
    "HtmlObjectElement",
    "HtmlOListElement",
    "HtmlOptGroupElement",
    "HtmlOptionElement",
    "HtmlOutputElement",
    "HtmlParagraphElement",
    "HtmlParamElement",
    "HtmlPictureElement",
    "HtmlPreElement",
    "HtmlProgressElement",
    "HtmlScriptElement",
    "HtmlSlotElement",
    "HtmlSourceElement",
    "HtmlSpanElement",
    "HtmlTableElement",
    "HtmlTableSectionElement",
    "HtmlTableCellElement",
    "HtmlTemplateElement",
    "HtmlTimeElement",
    "HtmlTitleElement",
    "HtmlTableRowElement",
    "HtmlTrackElement",
    "HtmlUListElement",
    "HtmlVideoElement",
] }
js-sys = "0.3"
wasm-bindgen-futures = "0.4.56"


[profile.dev]
panic = "unwind"

[profile.release]
panic = "unwind"
