[workspace]
members = [
    "silex",
    "silex_macros",
    "silex_core",
    "silex_html",
    "silex_dom", 
    "silex_reactivity",
    "examples/counter",
    "examples/store_demo",
    "examples/error_boundary_demo",
    "examples/router",
    "examples/showcase",
    "tools/silex_codegen"
]
exclude = [
    "docs",
    "assets",
    "dist",
]
resolver = "3"

[workspace.package]
version = "0.1.0-alpha.8"
edition = "2024"
license = "MIT OR Apache-2.0"
authors = ["Shao G. <shaog.me@gmail.com>"]
repository = "https://github.com/shaogme/silex"
description = "Next Generation High-Performance Rust Web Framework based on fine-grained reactivity and no-virtual-DOM architecture."
readme = "README.md"
homepage = "https://github.com/shaogme/silex"
documentation = "https://docs.rs/silex"
keywords = ["web", "framework", "wasm", "reactive", "gui"]
categories = ["web-programming", "wasm", "gui"]

[workspace.dependencies]

# Internal Crates
silex = { path = "silex", version = "0.1.0-alpha.8" }
silex_core = { path = "silex_core", version = "0.1.0-alpha.8" }
silex_dom = { path = "silex_dom", version = "0.1.0-alpha.8" }
silex_html = { path = "silex_html", version = "0.1.0-alpha.8" }
silex_macros = { path = "silex_macros", version = "0.1.0-alpha.8" }
silex_reactivity = { path = "silex_reactivity", version = "0.1.0-alpha.8" }
wasm-bindgen = { version = "0.2", default-features = false }
web-sys = { version = "0.3", default-features = false, features = [
    "AnimationEvent",
    "Comment",
    "CompositionEvent",
    "CssStyleDeclaration",
    "CustomEvent",
    "Document",
    "DocumentFragment",
    "DomTokenList",
    "DragEvent",
    "Element",
    "ErrorEvent",
    "Event",
    "EventTarget",
    "FocusEvent",
    "History",
    "HtmlAnchorElement",
    "HtmlAreaElement",
    "HtmlAudioElement",
    "HtmlButtonElement",
    "HtmlDetailsElement",
    "HtmlDialogElement",
    "HtmlElement",
    "HtmlFieldSetElement",
    "HtmlHeadElement",
    "HtmlIFrameElement",
    "HtmlImageElement",
    "HtmlInputElement",
    "HtmlLabelElement",
    "HtmlLinkElement",
    "HtmlOptGroupElement",
    "HtmlOptionElement",
    "HtmlOutputElement",
    "HtmlSelectElement",
    "HtmlSourceElement",
    "HtmlTableCellElement",
    "HtmlTextAreaElement",
    "HtmlTrackElement",
    "HtmlVideoElement",
    "InputEvent",
    "KeyboardEvent",
    "Location",
    "MouseEvent",
    "Node",
    "NodeList",
    "PointerEvent",
    "PromiseRejectionEvent",
    "ShadowRoot",
    "SubmitEvent",
    "SvgElement",
    "Text",
    "TouchEvent",
    "TransitionEvent",
    "UrlSearchParams",
    "WheelEvent",
    "Window",
    "console"
] }
js-sys = { version = "0.3", default-features = false }
wasm-bindgen-futures = { version = "0.4.56", default-features = false }


[profile.dev]
panic = "unwind"

[profile.release]
panic = "unwind"
