[workspace]
members = [
    "silex",
    "silex_macros",
    "silex_core",
    "silex_html",
    "silex_css",
    "silex_dom",
    "silex_rx",
    "silex_reactivity",
    "silex_hash",
    "silex_vtable",
    "examples/counter",
    "examples/store_demo",
    "examples/error_boundary_demo",
    "examples/router",
    "examples/showcase",
    "tools/silex_codegen",
]
exclude = [
    "docs",
    "assets",
    "dist",
]
resolver = "3"

[workspace.lints.rust]
warnings = "deny"

[workspace.package]
version = "0.1.0-beta.1"
edition = "2024"
license = "MIT OR Apache-2.0"
authors = ["Shao G. <shaog.me@gmail.com>"]
repository = "https://github.com/shaogme/silex"
description = "Next Generation High-Performance Rust Web Framework based on fine-grained reactivity and no-virtual-DOM architecture."
readme = "README.md"
homepage = "https://github.com/shaogme/silex"
documentation = "https://docs.rs/silex"
keywords = ["web", "framework", "wasm", "reactive", "gui"]
categories = ["web-programming", "wasm", "gui"]

[workspace.dependencies]

# Internal Crates
silex = { path = "silex", version = "0.1.0-beta.1" }
silex_core = { path = "silex_core", version = "0.1.0-beta.1" }
silex_dom = { path = "silex_dom", version = "0.1.0-beta.1" }
silex_html = { path = "silex_html", version = "0.1.0-beta.1" }
silex_css = { path = "silex_css", version = "0.1.0-beta.1" }
silex_macros = { path = "silex_macros", version = "0.1.0-beta.1" }
silex_reactivity = { path = "silex_reactivity", version = "0.1.0-beta.1" }
silex_hash = { path = "silex_hash", version = "0.1.0-beta.1" }
silex_rx = { path = "silex_rx", version = "0.1.0-beta.1" }
silex_vtable = { path = "silex_vtable", version = "0.1.0-beta.1" }

wasm-bindgen = { version = "0.2", default-features = false }
web-sys = { version = "0.3", default-features = false, features = [
    "AnimationEvent",
    "Comment",
    "CompositionEvent",
    "CssRuleList",
    "CssStyleDeclaration",
    "CssStyleSheet",
    "CustomEvent",
    "AbortController",
    "AbortSignal",
    "Blob",
    "CloseEvent",
    "DomException",
    "Document",
    "DocumentFragment",
    "DomTokenList",
    "DragEvent",
    "Element",
    "EventSource",
    "ErrorEvent",
    "Event",
    "EventTarget",
    "FocusEvent",
    "FormData",
    "History",
    "HtmlAnchorElement",
    "HtmlAreaElement",
    "HtmlAudioElement",
    "HtmlButtonElement",
    "HtmlDetailsElement",
    "HtmlDialogElement",
    "HtmlElement",
    "HtmlFieldSetElement",
    "HtmlHeadElement",
    "HtmlIFrameElement",
    "HtmlImageElement",
    "HtmlInputElement",
    "HtmlLabelElement",
    "HtmlLinkElement",
    "HtmlOptGroupElement",
    "HtmlOptionElement",
    "HtmlOutputElement",
    "HtmlSelectElement",
    "HtmlSourceElement",
    "HtmlTableCellElement",
    "HtmlTextAreaElement",
    "HtmlTrackElement",
    "HtmlVideoElement",
    "InputEvent",
    "KeyboardEvent",
    "Location",
    "MouseEvent",
    "ProgressEvent",
    "Headers",
    "Request",
    "RequestCache",
    "RequestCredentials",
    "RequestInit",
    "RequestMode",
    "RequestRedirect",
    "Response",
    "Node",
    "NodeList",
    "PointerEvent",
    "PromiseRejectionEvent",
    "ShadowRoot",
    "Storage",
    "StorageEvent",
    "StyleSheet",
    "SubmitEvent",
    "SvgElement",
    "Text",
    "TouchEvent",
    "TransitionEvent",
    "UrlSearchParams",
    "WebSocket",
    "MessageEvent",
    "WheelEvent",
    "Window",
    "console"
] }
js-sys = { version = "0.3", default-features = false }
wasm-bindgen-futures = { version = "0.4.56", default-features = false }
gloo-timers = { version = "0.3", default-features = false, features = ["futures"] }

serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde-wasm-bindgen = "0.6"
serde-json-wasm = "1.0"

syn = { version = "2.0", default-features = false }
quote = { version = "1.0", default-features = false }
proc-macro2 = { version = "1.0", default-features = false }

[profile.dev]
panic = "unwind"

[profile.release]
opt-level = "z"
lto = true
codegen-units = 1
strip = true
panic = "unwind"
