[package]
name = "silex"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
description.workspace = true
repository.workspace = true
homepage.workspace = true
keywords.workspace = true
categories.workspace = true
readme.workspace = true

[lints]
workspace = true

[dependencies]
silex_core.workspace = true
silex_dom.workspace = true
silex_html.workspace = true
silex_css.workspace = true
silex_macros = { workspace = true, optional = true }
silex_hash.workspace = true
wasm-bindgen.workspace = true
web-sys.workspace = true
js-sys.workspace = true
wasm-bindgen-futures.workspace = true
serde = { workspace = true, optional = true }
serde-json-wasm = { workspace = true, optional = true }
gloo-timers = { workspace = true, optional = true }

[features]
default = ["macros"]
macros = ["silex_macros"]
persistence = []
json = ["dep:serde", "dep:serde-json-wasm"]
net = ["dep:gloo-timers"]

[dev-dependencies]
trybuild = "1.0"
