[package]
name = "silex"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
description.workspace = true
repository.workspace = true
homepage.workspace = true
keywords.workspace = true
categories.workspace = true
readme.workspace = true

[lints]
workspace = true

[dependencies]
silex_core.workspace = true
silex_dom.workspace = true
silex_html.workspace = true
silex_css.workspace = true
silex_macros = { workspace = true, default-features = false, features = ["component", "store", "route"]}
silex_hash.workspace = true
wasm-bindgen.workspace = true
web-sys.workspace = true
js-sys.workspace = true
wasm-bindgen-futures.workspace = true
serde = { workspace = true, optional = true }
serde_json = { workspace = true, optional = true }
gloo-timers = { workspace = true, optional = true }

[features]
default = ["css"]
css = ["silex_macros/css"]
persistence = []
json = ["dep:serde", "dep:serde_json"]
net = ["dep:gloo-timers"]

[dev-dependencies]
trybuild = "1.0"
