[package]
name = "silex_core"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
description.workspace = true
repository.workspace = true
homepage.workspace = true
keywords.workspace = true
categories.workspace = true
readme.workspace = true

[dependencies]
silex_reactivity.workspace = true
wasm-bindgen.workspace = true
web-sys.workspace = true
wasm-bindgen-futures.workspace = true
