[package]
name = "silex_css"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
description.workspace = true
readme.workspace = true
homepage.workspace = true
documentation.workspace = true
keywords.workspace = true
categories.workspace = true

[dependencies]
silex_core.workspace = true
silex_dom.workspace = true
wasm-bindgen.workspace = true
web-sys.workspace = true

[dev-dependencies]
trybuild = "1.0"