[package]
name = "silex_css"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
description.workspace = true
readme.workspace = true
homepage.workspace = true
documentation.workspace = true
keywords.workspace = true
categories.workspace = true

[lints]
workspace = true

[dependencies]
silex_core.workspace = true
silex_dom.workspace = true
silex_hash.workspace = true
wasm-bindgen.workspace = true
web-sys = { workspace = true, features = ["CssStyleSheet", "CssRuleList"] }
js-sys.workspace = true
wasm-bindgen-futures.workspace = true

[dev-dependencies]
trybuild = "1.0"