[package]
name = "silex_dom"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
description.workspace = true
repository.workspace = true
homepage.workspace = true
keywords.workspace = true
categories.workspace = true
readme.workspace = true

[dependencies]
silex_core.workspace = true
wasm-bindgen.workspace = true
web-sys.workspace = true
js-sys.workspace = true