[package]
name = "silex_dom"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
description.workspace = true
repository.workspace = true
homepage.workspace = true
keywords.workspace = true
categories.workspace = true
readme.workspace = true

[lints]
workspace = true

[dependencies]
silex_vtable.workspace = true
silex_core.workspace = true
wasm-bindgen.workspace = true
web-sys = { workspace = true, features = [
    "Document",
    "Text",
    "Window",
    "Element",
    "Comment",
    "DocumentFragment",
    "MouseEvent",
    "InputEvent",
    "HtmlInputElement",
    "HtmlTextAreaElement",
    "HtmlSelectElement",
    "KeyboardEvent",
    "DomTokenList",
    "SvgElement",
    "CssStyleDeclaration",
    "SubmitEvent",
    "FocusEvent",
    "ErrorEvent",
    "PointerEvent",
    "DragEvent",
    "TouchEvent",
    "WheelEvent",
    "AnimationEvent",
    "TransitionEvent",
    "CompositionEvent",
    "Location",
    "PromiseRejectionEvent"
] }
js-sys.workspace = true