[package]
name = "silex_macros"
version = "0.1.0"
edition = "2024"

[lib]
proc-macro = true

[dependencies]
syn = { version = "2.0", features = ["full"] }
quote = "1.0"
proc-macro2 = "1.0"
lightningcss = { version = "1.0.0-alpha.70", optional = true }

[features]
default = ["component", "css", "store", "route"]
component = []
css = ["dep:lightningcss"]
store = []
route = []
