[package]
name = "silex_macros"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
description.workspace = true
repository.workspace = true
homepage.workspace = true
keywords.workspace = true
categories.workspace = true
readme.workspace = true

[lib]
proc-macro = true

[dependencies]
syn = { version = "2.0", features = ["full"] }
quote = "1.0"
proc-macro2 = "1.0"
lightningcss = { version = "1.0.0-alpha.70", optional = true }

[dev-dependencies]
silex.workspace = true

[features]
default = ["component", "css", "store", "route"]
component = []
css = ["dep:lightningcss"]
store = []
route = []
