[package]
name = "silex_macros"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
description.workspace = true
repository.workspace = true
homepage.workspace = true
keywords.workspace = true
categories.workspace = true
readme.workspace = true

[lib]
proc-macro = true

[lints]
workspace = true

[dependencies]
syn = { workspace = true, features = ["full", "extra-traits", "parsing", "printing", "proc-macro", "clone-impls"] }
quote = { workspace = true, features = ["proc-macro"] }
proc-macro2 = { workspace = true, features = ["proc-macro"] }
lightningcss = { version = "1.0.0-alpha.71", optional = true , default-features = false }

silex_hash = { workspace = true, optional = true }

[dev-dependencies]
# silex.workspace = true

[features]
default = ["component", "css", "store", "route"]
component = []
css = ["dep:lightningcss", "dep:silex_hash"]
store = []
route = []
