[package]
name = "silex_rx"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
description.workspace = true
readme.workspace = true
homepage.workspace = true
documentation.workspace = true
keywords.workspace = true
categories.workspace = true

[lib]
proc-macro = true

[lints]
workspace = true

[dependencies]
syn = { workspace = true, features = ["full", "visit-mut", "extra-traits", "parsing", "printing", "proc-macro", "clone-impls"] }
quote = { workspace = true, features = ["proc-macro"] }
proc-macro2 = { workspace = true, features = ["proc-macro"] }
