[package]
name = "silex_codegen"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
description.workspace = true
repository.workspace = true
homepage.workspace = true
keywords.workspace = true
categories.workspace = true
readme.workspace = true
publish = false

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
heck = "0.5" # For snake_case/CamelCase conversion
reqwest = { version = "0.12", features = ["blocking", "json"], default-features = false }
